--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,9 @@ body {
 .quest-list {
     list-style-type: none;
     padding-left: 20px;
+    
 }
+
 
 .quest-list li::before {
     content: ">";
@@ -345,6 +347,12 @@ body {
 @keyframes blink-caret {
     from, to { border-color: transparent }
     50% { border-color: #00FF00 }
+}
+
+.green-strong{
+    color: #00FF00;
+    text-emphasis: strong;
+    
 }
 footer {
     text-align: center;
